Fix layout issues

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -1247,6 +1247,61 @@ nav:hover .forAnimate{
   color: #fff;
   width: 100%; }
 
+.check-email {
+  width: 100%; }
+  @media (min-width: 768px) {
+    .check-email {
+      width: 70%;
+      margin-top: 20px; } }
+  @media (min-width: 1024px) {
+    .check-email {
+      width: 45%; } }
+
+.check-email h2 {
+  text-align: center;
+  font-size: 1.4em;
+  margin-bottom: 80px;
+  margin-bottom: 50px; }
+  @media (min-width: 768px) {
+    .check-email h2 {
+      font-size: 1.6em; } }
+  @media (min-width: 1024px) {
+    .check-email h2 {
+      font-size: 1.8em; } }
+
+.reset {
+  width: 100%; }
+  @media (min-width: 768px) {
+    .reset {
+      width: 70%;
+      margin-top: 20px; } }
+  @media (min-width: 1024px) {
+    .reset {
+      width: 45%; } }
+
+.reset h2 {
+  text-align: center;
+  font-size: 1.4em;
+  margin-bottom: 80px;
+  margin-bottom: 50px; }
+  @media (min-width: 768px) {
+    .reset h2 {
+      font-size: 1.6em; } }
+  @media (min-width: 1024px) {
+    .reset h2 {
+      font-size: 1.8em; } }
+
+.reset input {
+  width: 100%;
+  padding: 5px 10px;
+  cursor: pointer;
+  border: 1px solid #374a5b; }
+
+.reset input[type=submit] {
+  width: 100%;
+  color: #fff;
+  background-color: #374a5b; }
+
 @media (min-width: 1024px) {
   .index-back-end {
     width: 70%; } }
